# pangolin

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile  GISAID_2020-03-31_2685_CDS.ml.tree  README.md  TESTING.md  did_somebody_say_test_query.fasta  environment.yml  lineages.csv  lineages.tsv  pyproject.toml  setup.py
.github/workflows/: pangolin.yml  pangolin_macos.yml  publish_pypi.yml  push_dockerhub.yml  test_mac.yml
docs/: update_guide_tree.md
lineage/: __init__.py  command.py
pangolin/: __init__.py  command.py  config.yaml
pangolin/data/: anonymised.aln.fasta.treefile  config_b.1.1.7.csv  config_b.1.214.2.csv  config_b.1.351.csv  config_p.1.csv  config_p.2.csv  config_p.3.csv  data_compatibility.csv  lineages.header_fixed.csv  reference.fasta
pangolin/pangolearn/: pangolearn.py
pangolin/scripts/: Snakefile  all_snps.py  assign_lineage.py  assign_query_file.smk  assign_query_lineage.smk  cache.smk  categorise_snps.py  custom_logger.py  defining_snps.py  find_all_snps.py  get_basal_polytomy.py  get_masked_representatives.py  get_polytomy.py  lineage_classes.py  lineage_finder.py  log_handler_handle.py  pangofunks.py  pangolearn.py  pangolearn.smk  prepare_package_data.smk  prepare_package_uk.smk  preprocessing.smk  report_classes.py  report_results.py  run_results_script.py  sam_2_snps.py  snp_based_classifier.py  snp_based_classify.smk  type_variants.py  usher.smk  utils.py
pangolin/test/: global_lineage_information.csv  (+6 more)
subtype/: __init__.py  config.yaml
subtype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_command.py
(+54 files in other folders)
